Fixed a layout bug

--- a/src/frontend/scss/_foundation_settings.scss
+++ b/src/frontend/scss/_foundation_settings.scss
@@ -263,7 +263,7 @@ $badge-font-size: 0.6rem;
 // 10. Breadcrumbs
 // ---------------
 
-$breadcrumbs-margin: $global-margin/2 0 $global-margin/2 0;
+$breadcrumbs-margin: 0;
 $breadcrumbs-item-font-size: rem-calc(13);
 $breadcrumbs-item-color: #626262;
 $breadcrumbs-item-color-current: #5b8f22;
